# cgshop2023

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt  runscript.sh  sorted_instance_list.txt  sorted_runscript.sh  test.py
instances/: test.instance.json
solutions/: ccheese11045.solution.json  ccheese1125.solution.json  ccheese13171.solution.json  ccheese1325.solution.json  ccheese142.solution.json  ccheese1762.solution.json  ccheese194.solution.json  ccheese2225.solution.json  ccheese234.solution.json  ccheese2643.solution.json  ccheese282.solution.json  ccheese3082.solution.json  ccheese372.solution.json  ccheese4390.solution.json  ccheese459.solution.json  ccheese528.solution.json  ccheese5289.solution.json  ccheese6568.solution.json  ccheese686.solution.json  ccheese7893.solution.json  ccheese877.solution.json  ccheese8817.solution.json  cheese1006.solution.json  cheese12554.solution.json  cheese1262.solution.json  cheese14941.solution.json  cheese1516.solution.json  cheese163.solution.json  cheese2058.solution.json  cheese225.solution.json  cheese2527.solution.json  cheese271.solution.json  cheese3015.solution.json  cheese302.solution.json  cheese3489.solution.json  cheese399.solution.json  cheese4951.solution.json  cheese528.solution.json  cheese6044.solution.json  cheese617.solution.json  (+89 more)
src/: draw_solution.hpp  flood.cpp  flood.hpp  globals.cpp  globals.hpp  init_ogl_context.h  localsearch.cpp  localsearch.hpp  simple.cpp  triangulation.cpp  triangulation.hpp
src/cgshop2023_core/: arrangement_util.hpp  cpp_instance.cpp  cpp_instance.hpp  fmt_point.h  (+3 more)
